--- a/package.json
+++ b/package.json
@@ -10,18 +10,22 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
+    "vue-loader": "^15.9.3",
+    "vue-router": "^4.0.0-beta.13",
     "vuesax": "^4.0.1-alpha.25"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.5.7",
     "@vue/cli-plugin-eslint": "^4.5.7",
+    "@vue/cli-plugin-router": "^4.5.7",
     "@vue/cli-service": "^4.5.7",
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.11.0",
     "eslint-plugin-vue": "^7.0.1",
     "node-sass": "^4.14.1",
-    "sass-loader": "^10.0.3"
+    "sass-loader": "^10.0.3",
+    "vue-cli-plugin-vuetify": "^2.0.7"
   },
   "eslintConfig": {
     "root": true,
