--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "vue": "^3.0.0",
     "vue-loader": "^15.9.3",
     "vue-router": "^4.0.0-beta.13",
-    "vuesax": "^4.0.1-alpha.25"
+    "vuesax": "^4.0.1-alpha.25",
+    "vuex": "^4.0.0-0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.5.7",
     "@vue/cli-plugin-eslint": "^4.5.7",
     "@vue/cli-plugin-router": "^4.5.7",
+    "@vue/cli-plugin-vuex": "^4.5.7",
     "@vue/cli-service": "^4.5.7",
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
